// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`responsive table should add data-th 1`] = `
"<table>
<thead>
<tr>
<th>foo</th>
<th>bar</th>
</tr>
</thead>
<tbody>
<tr>
<td data-th=\\"foo\\"><span>baz</span></td>
<td data-th=\\"bar\\"><span>-</span></td>
</tr>
<tr>
<td data-th=\\"foo\\"><span>sam</span></td>
<td data-th=\\"bar\\"><span>chen</span></td>
</tr>
</tbody>
</table>
"
`;

exports[`responsive table should handle empty thead 1`] = `
"<table>
<thead>
<tr>
<th></th>
<th>bar</th>
</tr>
</thead>
<tbody>
<tr>
<td data-th=\\"\\"><span>baz</span></td>
<td data-th=\\"bar\\"><span>-</span></td>
</tr>
<tr>
<td data-th=\\"\\"><span>sam</span></td>
<td data-th=\\"bar\\"><span>chen</span></td>
</tr>
</tbody>
</table>
"
`;
